test/fail/ac/pointcutunknown.app
//does not exist

application test

access control rules

  rule pointcut somepointcut(a:Int)
  {
    true
  }
  